--- a/.cproject
+++ b/.cproject
@@ -85,15 +85,32 @@
 								</option>
 								<option id="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.checkSection.1998050880" name="セクションの割り付けアドレスをチェックする (-cpu)" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.checkSection" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.memoryType.1626979268" name="アドレス範囲指定方法 (-cpu(アドレス範囲指定方法))" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.memoryType" useByScannerDiscovery="false" value="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.memoryType.autoSpecify" valueType="enumerated"/>
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.noneLinkageOrderList.537946959" name="(リンク順序のリスト) (-input/-library/-binary)" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.noneLinkageOrderList" valueType="stringList">
-									<listOptionValue builtIn="false" value="&quot;.\generate\dbsct.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\generate\hwsetup.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\generate\intprg.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\generate\resetprg.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\generate\sbrk.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\generate\vecttbl.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\src\Micromouse2.obj&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;.\Micromouse2.lib&quot;"/>
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.noneLinkageOrderList.537946959" name="(リンク順序のリスト) (-input/-library/-binary)" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.linker.option.noneLinkageOrderList" useByScannerDiscovery="false" valueType="stringList">
+									<listOptionValue builtIn="false" value="&quot;.\src\ADC.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Battery.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Buzzer.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Clock.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Control.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\E2Flash_RX220.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Interrupt.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Log.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Map.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Motor.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\My_Func.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\New_Basic_Mouse2.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Run.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\SCI.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\UI.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Wait.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\Wall_Sensor.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\dbsct.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\hardware_setup.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\interrupt_handlers.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\reset_program.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\sbrk.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\vector_table.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\src\xprintf.obj&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;.\basicmouse2022.lib&quot;"/>
 								</option>
 							</tool>
 							<tool id="com.renesas.cdt.managedbuild.renesas.ccrx.base.librarian.1406252103" name="Library Generator" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.base.librarian">
@@ -105,6 +122,7 @@
 									<listOptionValue builtIn="false" value=""/>
 								</option>
 								<option id="com.renesas.cdt.managedbuild.renesas.ccrx.librarian.option.lang.630298988" name="C言語標準ライブラリ関数の構成 (-lang)" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.librarian.option.lang" useByScannerDiscovery="false" value="com.renesas.cdt.managedbuild.renesas.ccrx.librarian.option.lang.c99" valueType="enumerated"/>
+								<option id="com.renesas.cdt.managedbuild.renesas.ccrx.librarian.option.headMathf.201818379" name="mathf.h（C89/C99）：数値計算用ライブラリ（float型関数） (-head=mathf)" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.librarian.option.headMathf" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 							</tool>
 							<tool id="com.renesas.cdt.managedbuild.renesas.ccrx.base.converter.24807037" name="Converter" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.base.converter">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrx.converter.option.userBefore.1211034428" name="追加するオプション（すべての指定オプションの前に追加）" superClass="com.renesas.cdt.managedbuild.renesas.ccrx.converter.option.userBefore" useByScannerDiscovery="false" valueType="stringList">
